bin/testsuite/tests/compiler/src/errors/compiler5654.swg
#global testerror "Err0103"
#test
{
    var x: S32
}
